Add support for wsgi framework
Added wsgi framework support to create masakari-api
service using oslo_service framework. Similar to core
openstack projects, config items will be kept at centralized
location.

Refer README.rst to cofigure and run masakari-api service.

Change-Id: Idb0120b8cf3b10642c51b286d82cd0944cad5ca3

--- a/setup.cfg
+++ b/setup.cfg
@@ -23,6 +23,14 @@ classifier =
 packages =
     masakari
 
+[entry_points]
+console_scripts =
+    masakari-api = masakari.cmd.api:main
+
+masakari.api.v1.extensions =
+    versions = masakari.api.openstack.ha.versionsV1:Versions
+    extension_info = masakari.api.openstack.ha.extension_info:ExtensionInfo
+
 [build_sphinx]
 source-dir = doc/source
 build-dir = doc/build
