--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,18 @@
 # of appearance. Changing the order has an impact on the overall integration
 # process, which may cause wedges in the gate later.
 
-pbr>=1.6
+Babel>=2.3.4 # BSD
+iso8601>=0.1.11 # MIT
+microversion-parse>=0.1.2 # Apache-2.0
+oslo.config>=3.10.0 # Apache-2.0
+oslo.db>=4.1.0 # Apache-2.0
+oslo.i18n>=2.1.0 # Apache-2.0
+oslo.log>=1.14.0 # Apache-2.0
+oslo.middleware>=3.0.0 # Apache-2.0
+oslo.policy>=0.5.0 # Apache-2.0
+oslo.service>=1.10.0 # Apache-2.0
+oslo.utils>=3.11.0 # Apache-2.0
+pbr>=1.6 # Apache-2.0
+setuptools>=16.0 # PSF/ZPL
+six>=1.9.0 # MIT
+stevedore>=1.10.0 # Apache-2.0
