Add db sync support for masakari
Added migration scripts for failover segment and host.
User will be able to sync the database with masakari-manage
command.

Change-Id: Ic37e681c6cb1ca6a341a77b738abb0a43a2910c4

--- a/setup.cfg
+++ b/setup.cfg
@@ -26,6 +26,10 @@ packages =
 [entry_points]
 console_scripts =
     masakari-api = masakari.cmd.api:main
+    masakari-manage = masakari.cmd.manage:main
+
+masakari.database.migration_backend =
+    sqlalchemy = oslo_db.sqlalchemy.migration
 
 masakari.api.v1.extensions =
     versions = masakari.api.openstack.ha.versionsV1:Versions
