Add hacking checks
Added required hacking checks to follow OpenStack coding
standards.

Change-Id: I20fe168f364296844a593ec3880e1639637dbf06

--- a/tox.ini
+++ b/tox.ini
@@ -18,6 +18,7 @@ install_command = pip install -c{env:UPPER_CONSTRAINTS_FILE:https://git.openstac
 
 [testenv:pep8]
 commands = flake8 {posargs}
+deps = hacking
 
 [testenv:pep8-constraints]
 install_command = {[testenv:common-constraints]install_command}
@@ -59,6 +60,10 @@ commands = oslo_debug_helper {posargs}
 # E123, E125 skipped as they are invalid PEP-8.
 
 show-source = True
-ignore = E123,E125,H405
+ignore = E123,E125,E128,H405
 builtins = _
 exclude=.venv,.git,.tox,dist,doc,*lib/python*,*egg,build
+
+[hacking]
+local-check-factory = masakari.hacking.checks.factory
+import_exceptions = masakari.i18n
