--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ oslo.middleware>=3.0.0 # Apache-2.0
 oslo.policy>=0.5.0 # Apache-2.0
 oslo.service>=1.10.0 # Apache-2.0
 oslo.utils>=3.11.0 # Apache-2.0
+oslo.versionedobjects>=1.13.0 # Apache-2.0
 pbr>=1.6 # Apache-2.0
 setuptools>=16.0 # PSF/ZPL
 six>=1.9.0 # MIT
