Make use of oslo-config-generator
oslo_config provide a utility for generating sample config files,
which provide more detail about opts, like Minimum/Maximum value
and Allowed values.

After this patch, new config options of masakari code should register
with masakari/conf/opts.py.

Change-Id: I8f2f7e87268498ebee7ca164db1c98ef43c279b0

--- a/setup.cfg
+++ b/setup.cfg
@@ -24,6 +24,12 @@ packages =
     masakari
 
 [entry_points]
+oslo.config.opts =
+    masakari.conf = masakari.conf.opts:list_opts
+
+oslo.config.opts.defaults =
+    masakari.api = masakari.common.config:set_middleware_defaults
+
 console_scripts =
     masakari-api = masakari.cmd.api:main
     masakari-manage = masakari.cmd.manage:main
