--- a/tox.ini
+++ b/tox.ini
@@ -16,6 +16,9 @@ commands = python setup.py test --slowest --testr-args='{posargs}'
 [testenv:common-constraints]
 install_command = pip install -c{env:UPPER_CONSTRAINTS_FILE:https://git.openstack.org/cgit/openstack/requirements/plain/upper-constraints.txt} {opts} {packages}
 
+[testenv:genconfig]
+commands = oslo-config-generator --config-file=etc/masakari/masakari-config-generator.conf
+
 [testenv:pep8]
 commands = flake8 {posargs}
 deps = hacking
