--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@
 
 Babel>=2.3.4 # BSD
 iso8601>=0.1.11 # MIT
+jsonschema!=2.5.0,<3.0.0,>=2.0.0 # MIT
 microversion-parse>=0.1.2 # Apache-2.0
 oslo.config>=3.10.0 # Apache-2.0
 oslo.db>=4.1.0 # Apache-2.0
