Added failover segments controller for masakari
This patch will allow masakari operators to hit following apis:

1] GET /v1/segments
2] GET /v1/segments/<segment_uuid>
3] POST /v1/segments
4] PUT /v1/segments/<segment_uuid>
5] DELETE /v1/segments/<segment_uuid>

Change-Id: I63b48bfa70db7bfacec1c8431fe48feb7aa4c7ef

--- a/setup.cfg
+++ b/setup.cfg
@@ -39,6 +39,7 @@ masakari.database.migration_backend =
 masakari.api.v1.extensions =
     versions = masakari.api.openstack.ha.versionsV1:Versions
     extension_info = masakari.api.openstack.ha.extension_info:ExtensionInfo
+    segments = masakari.api.openstack.ha.segments:Segments
 
 [build_sphinx]
 source-dir = doc/source
