Add notifications controller for masakari
This patch will add following notification apis:

1] GET /v1/notifications
2] GET /v1/notifications/<notification_uuid>
3] POST /v1/notifications

Change-Id: Id2d2b8ba5c372b21a5b0df4f1e4db9054e55831f

--- a/setup.cfg
+++ b/setup.cfg
@@ -41,6 +41,7 @@ masakari.api.v1.extensions =
     extension_info = masakari.api.openstack.ha.extension_info:ExtensionInfo
     segments = masakari.api.openstack.ha.segments:Segments
     hosts = masakari.api.openstack.ha.hosts:Hosts
+    notifications = masakari.api.openstack.ha.notifications:Notifications
 
 [build_sphinx]
 source-dir = doc/source
