Added host controller for masakari
Host controller will allow user to do CRUD operations on hosts.
Added authorize policy for host controller methods as these are
going to be called by admin only.

Change-Id: I9871d4163d13bddfa49e6ee5f532de641711c30e

--- a/setup.cfg
+++ b/setup.cfg
@@ -40,6 +40,7 @@ masakari.api.v1.extensions =
     versions = masakari.api.openstack.ha.versionsV1:Versions
     extension_info = masakari.api.openstack.ha.extension_info:ExtensionInfo
     segments = masakari.api.openstack.ha.segments:Segments
+    hosts = masakari.api.openstack.ha.hosts:Hosts
 
 [build_sphinx]
 source-dir = doc/source
