Add masakari-engine support
Added masakari-engine service using oslo_service framework. Added
MasakariManager class which will handle RPC calls related to
notifications.

Change-Id: Ifd704cf452ceb4ece2867ca8fba3f94fbb94aa42

--- a/setup.cfg
+++ b/setup.cfg
@@ -31,6 +31,7 @@ oslo.config.opts.defaults =
 
 console_scripts =
     masakari-api = masakari.cmd.api:main
+    masakari-engine = masakari.cmd.engine:main
     masakari-manage = masakari.cmd.manage:main
 
 masakari.database.migration_backend =
