Add business rule for process_notification
Added business rules:
Ignore notification if host is on maintenance.
Ignore notification if it is duplicate.

Change-Id: I963ab41e79db74d2574731201ea6df5e2675d449

--- a/etc/masakari/masakari-config-generator.conf
+++ b/etc/masakari/masakari-config-generator.conf
@@ -3,6 +3,7 @@ output_file = etc/masakari/masakari.conf.sample
 wrap_width = 80
 namespace = masakari.conf
 namespace = masakari.api
+namespace = masakari.engine
 namespace = oslo.log
 namespace = oslo.policy
 namespace = oslo.db
