--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ oslo.service>=1.10.0 # Apache-2.0
 oslo.utils>=3.11.0 # Apache-2.0
 oslo.versionedobjects>=1.13.0 # Apache-2.0
 pbr>=1.6 # Apache-2.0
+python-novaclient!=2.33.0,>=2.29.0 # Apache-2.0
 setuptools>=16.0 # PSF/ZPL
 six>=1.9.0 # MIT
 stevedore>=1.10.0 # Apache-2.0
