Add TaskFlowDriver support to process notifications
Added base NotificationDriver and TaskFlowDriver which will implement
NotificationDriver for procesing the notification workflows such as
host-failure, instance-failure and process-failure.

Change-Id: I2d12681bd26b5b1fb2535732d9f3c08ec2409d7a

--- a/setup.cfg
+++ b/setup.cfg
@@ -44,6 +44,9 @@ masakari.api.v1.extensions =
     hosts = masakari.api.openstack.ha.hosts:Hosts
     notifications = masakari.api.openstack.ha.notifications:Notifications
 
+masakari.driver =
+    taskflow_driver = masakari.engine.drivers.taskflow:TaskFlowDriver
+
 [build_sphinx]
 source-dir = doc/source
 build-dir = doc/build
