Add missing namespaces in masakari-config-generator.conf
Added missing namespaces including oslo.messaging for configuring
messaging server, oslo.service.service for specifying graceful
shutdown timeout, oslo.db.concurrency for enabling thread pooling
for all DB API calls, oslo.config to configure config directory,
oslo.service.wsgi for wsgi config options and oslo.versionedobjects
for versioned objects related config options.

Change-Id: I9dcc094090b10a65ebbe55ab2d7fdbf2fb0b129f

--- a/etc/masakari/masakari-config-generator.conf
+++ b/etc/masakari/masakari-config-generator.conf
@@ -1,11 +1,17 @@
 [DEFAULT]
 output_file = etc/masakari/masakari.conf.sample
 wrap_width = 80
-namespace = masakari.conf
-namespace = masakari.api
-namespace = masakari.engine
-namespace = oslo.log
-namespace = oslo.policy
-namespace = oslo.db
-namespace = oslo.middleware
 namespace = keystonemiddleware.auth_token
+namespace = masakari.api
+namespace = masakari.conf
+namespace = masakari.engine
+namespace = oslo.config
+namespace = oslo.db
+namespace = oslo.db.concurrency
+namespace = oslo.log
+namespace = oslo.messaging
+namespace = oslo.middleware
+namespace = oslo.policy
+namespace = oslo.service.service
+namespace = oslo.service.wsgi
+namespace = oslo.versionedobjects
