--- a/tox.ini
+++ b/tox.ini
@@ -57,6 +57,13 @@ commands =
 [testenv:debug]
 commands = oslo_debug_helper {posargs}
 
+[testenv:api-ref]
+# This environment is called from CI scripts to test and publish
+# the API Ref to developer.openstack.org.
+commands =
+  rm -rf api-ref/build
+  sphinx-build -W -b html -d api-ref/build/doctrees api-ref/source api-ref/build/html
+
 [flake8]
 # E123, E125 skipped as they are invalid PEP-8.
 
