--- a/tox.ini
+++ b/tox.ini
@@ -22,6 +22,7 @@ commands = {posargs}
 
 [testenv:cover]
 commands = python setup.py test --coverage --testr-args='{posargs}'
+           coverage report
 
 [testenv:docs]
 commands = python setup.py build_sphinx
