Use os-testr instead of testr
Masakari should use ostestr instead of testr. ostestr is more
powerful and provide much prettier output than testr. Other
projects like cinder, nova, glance, neutron etc already uses
the ostestr wrapper.

Using ostestr shows each tests execution separately because of
which it has shown errors related to "KeyError" in existing test
cases. The error looks like below:

"Exception in string format operation: KeyError: u'id'"

This happens if we don't pass keyword argument like "id" to
exception which we expect to be raised from test through
side_effect [1]. This doesn't lead to test failure but it
appears in test logs. This patch fixes such issues by passing
expected keyword arguments to exceptions.

[1] https://github.com/openstack/masakari/blob/master/masakari/tests/unit/api/openstack/ha/test_hosts.py#L364
Change-Id: I91603ea3dcf35fd20a00dcf477b93d612edca362

--- a/tox.ini
+++ b/tox.ini
@@ -6,10 +6,33 @@ skipsdist = True
 [testenv]
 usedevelop = True
 install_command = pip install -c{env:UPPER_CONSTRAINTS_FILE:https://git.openstack.org/cgit/openstack/requirements/plain/upper-constraints.txt} {opts} {packages}
-setenv =
-   VIRTUAL_ENV={envdir}
+setenv = VIRTUAL_ENV={envdir}
+         OS_TEST_PATH=./masakari/tests/unit
+         LANGUAGE=en_US
+         LC_ALL=en_US.utf-8
 deps = -r{toxinidir}/test-requirements.txt
-commands = python setup.py test --slowest --testr-args='{posargs}'
+whitelist_externals = bash
+                      find
+                      rm
+                      env
+# By default ostestr will set concurrency
+# to ncpu, to specify something else use
+# the concurrency=<n> option.
+# call ie: 'tox -epy27 -- --concurrency=4'
+commands =
+  find . -type f -name "*.pyc" -delete
+  rm -Rf .testrepository/times.dbm
+passenv = http_proxy HTTP_PROXY https_proxy HTTPS_PROXY no_proxy NO_PROXY OS_DEBUG GENERATE_HASHES
+
+[testenv:py27]
+commands =
+    {[testenv]commands}
+    ostestr '{posargs}'
+
+[testenv:py34]
+commands =
+    {[testenv]commands}
+    ostestr '{posargs}'
 
 [testenv:genconfig]
 commands = oslo-config-generator --config-file=etc/masakari/masakari-config-generator.conf
