--- a/tox.ini
+++ b/tox.ini
@@ -48,7 +48,9 @@ commands = python setup.py test --coverage --testr-args='{posargs}'
            coverage report
 
 [testenv:docs]
-commands = python setup.py build_sphinx
+basepython = python2.7
+commands =
+  python setup.py build_sphinx
 
 [testenv:releasenotes]
 commands =
