Add hooks for recovery method customization plugins
This change adds hooks for pulling in plugins for
Interoperable recovery method customization taksflow
by configuring the actions in terms of execution order,
extra parameters to execute commands in action.

Implements: blueprint recovery-method-customization

Change-Id: I8150935ce0a4e592bd0f87bb3c7b3e599cefa033

--- a/setup.cfg
+++ b/setup.cfg
@@ -22,12 +22,14 @@ classifier =
 data_files =
     etc/masakari =
         etc/masakari/api-paste.ini
+        etc/masakari/masakari-custom-recovery-methods.conf
 packages =
     masakari
 
 [entry_points]
 oslo.config.opts =
     masakari.conf = masakari.conf.opts:list_opts
+    customized_recovery_flow_opts = masakari.conf.opts:list_recovery_workflow_opts
 
 oslo.config.opts.defaults =
     masakari.api = masakari.common.config:set_middleware_defaults
@@ -62,6 +64,17 @@ masakari.api.v1.extensions =
 
 masakari.driver =
     taskflow_driver = masakari.engine.drivers.taskflow:TaskFlowDriver
+
+masakari.task_flow.tasks =
+    disable_compute_service_task = masakari.engine.drivers.taskflow.host_failure:DisableComputeServiceTask
+    prepare_HA_enabled_instances_task = masakari.engine.drivers.taskflow.host_failure:PrepareHAEnabledInstancesTask
+    evacuate_instances_task = masakari.engine.drivers.taskflow.host_failure:EvacuateInstancesTask
+    stop_instance_task = masakari.engine.drivers.taskflow.instance_failure:StopInstanceTask
+    start_instance_task = masakari.engine.drivers.taskflow.instance_failure:StartInstanceTask
+    confirm_instance_active_task = masakari.engine.drivers.taskflow.instance_failure:ConfirmInstanceActiveTask
+    disable_compute_node_task = masakari.engine.drivers.taskflow.process_failure:DisableComputeNodeTask
+    confirm_compute_node_disabled_task = masakari.engine.drivers.taskflow.process_failure:ConfirmComputeNodeDisabledTask
+    no_op = masakari.engine.drivers.taskflow.no_op:Noop
 
 [build_sphinx]
 source-dir = doc/source
