--- a/tox.ini
+++ b/tox.ini
@@ -37,6 +37,7 @@ commands =
 [testenv:genconfig]
 basepython = python3
 commands = oslo-config-generator --config-file=etc/masakari/masakari-config-generator.conf
+	   oslo-config-generator --config-file=etc/masakari/masakari-customized-recovery-flow-config-generator.conf
 
 [testenv:genpolicy]
 commands = oslopolicy-sample-generator --config-file=etc/masakari/masakari-policy-generator.conf
