Deploy masakari-api with uwsgi
As per community goal [1], this patch allows deploying
masakari-api with uwsgi.

NOTE:
This patch takes reference from the nova implementation of deploying
nova-api with uwsgi.

[1] https://governance.openstack.org/tc/goals/pike/deploy-api-in-wsgi.html
Change-Id: I469d4b6df49ad3489722feae0b795c20a6a3913b

--- a/setup.cfg
+++ b/setup.cfg
@@ -38,6 +38,9 @@ console_scripts =
     masakari-engine = masakari.cmd.engine:main
     masakari-manage = masakari.cmd.manage:main
 
+wsgi_scripts =
+    masakari-wsgi = masakari.cmd.api:initialize_application
+
 masakari.database.migration_backend =
     sqlalchemy = oslo_db.sqlalchemy.migration
 
