--- a/tox.ini
+++ b/tox.ini
@@ -38,6 +38,9 @@ commands =
 basepython = python3
 commands = oslo-config-generator --config-file=etc/masakari/masakari-config-generator.conf
 
+[testenv:genpolicy]
+commands = oslopolicy-sample-generator --config-file=etc/masakari/masakari-policy-generator.conf
+
 [testenv:pep8]
 basepython = python3
 commands = flake8 {posargs}
