--- a/etc/masakari/masakari.conf
+++ b/etc/masakari/masakari.conf
@@ -13,8 +13,8 @@ auth_strategy=keystone
 api_paste_config = /etc/masakari/api-paste.ini
 
 [keystone_authtoken]
-auth_uri = http://127.0.0.1:5000
-auth_url = http://127.0.0.1:35357
+www_authenticate_uri = http://127.0.0.1:5000
+auth_url = http://127.0.0.1:5000
 auth_type = password
 project_domain_id = default
 user_domain_id = default
