--- a/doc/source/_static/masakari.conf.sample
+++ b/doc/source/_static/masakari.conf.sample
@@ -838,7 +838,7 @@
 # you're using a versioned v2 endpoint here, then this should *not* be the same
 # endpoint the service user utilizes for validating tokens, because normal end
 # users may not be able to reach that endpoint. (string value)
-#auth_uri = <None>
+#www_authenticate_uri = <None>
 
 # API version of the admin Identity API endpoint. (string value)
 #auth_version = <None>
