--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ iso8601>=0.1.11 # MIT
 jsonschema<3.0.0,>=2.6.0 # MIT
 keystoneauth1>=3.4.0 # Apache-2.0
 keystonemiddleware>=4.17.0 # Apache-2.0
+WebOb>=1.7.1 # MIT
 microversion-parse>=0.2.1 # Apache-2.0
 oslo.config>=5.2.0 # Apache-2.0
 oslo.context>=2.19.2 # Apache-2.0
