fix tox python3 overrides
We want to default to running all tox environments under python 3, so
set the basepython value in each environment.

We do not want to specify a minor version number, because we do not
want to have to update the file every time we upgrade python.

We do not want to set the override once in testenv, because that
breaks the more specific versions used in default environments like
py35 and py36.

Change-Id: Ibf03dd1e17a50ce1b263998342a6ebcb814562d3
Signed-off-by: Doug Hellmann <doug@doughellmann.com>

--- a/tox.ini
+++ b/tox.ini
@@ -29,20 +29,25 @@ commands =
     stestr run {posargs}
 
 [testenv:py35]
+basepython = python3
 commands =
     {[testenv]commands}
     stestr run {posargs}
 
 [testenv:genconfig]
+basepython = python3
 commands = oslo-config-generator --config-file=etc/masakari/masakari-config-generator.conf
 
 [testenv:pep8]
+basepython = python3
 commands = flake8 {posargs}
 
 [testenv:venv]
+basepython = python3
 commands = {posargs}
 
 [testenv:cover]
+basepython = python3
 commands = python setup.py test --coverage --testr-args='{posargs}'
            coverage report
 
@@ -52,13 +57,16 @@ commands =
   python setup.py build_sphinx
 
 [testenv:releasenotes]
+basepython = python3
 commands =
   sphinx-build -a -E -W -d releasenotes/build/doctrees -b html releasenotes/source releasenotes/build/html
 
 [testenv:debug]
+basepython = python3
 commands = oslo_debug_helper {posargs}
 
 [testenv:api-ref]
+basepython = python3
 # This environment is called from CI scripts to test and publish
 # the API Ref to developer.openstack.org.
 commands =
