Switch to using stestr
According to Openstack summit session [1] stestr is maintained
project to which all Openstack projects should migrate.
Let's switch it then.

[1] https://etherpad.openstack.org/p/YVR-python-pti

Change-Id: Ifb64df81f7684d5bf732afcbe594a38691a7286f
Signed-off-by: Chuck Short <chucks@redhat.com>

--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,6 @@ skipsdist = True
 usedevelop = True
 install_command = pip install -c{env:UPPER_CONSTRAINTS_FILE:https://git.openstack.org/cgit/openstack/requirements/plain/upper-constraints.txt} {opts} {packages}
 setenv = VIRTUAL_ENV={envdir}
-         OS_TEST_PATH=./masakari/tests/unit
          LANGUAGE=en_US
          LC_ALL=en_US.utf-8
 deps = -r{toxinidir}/test-requirements.txt
@@ -15,7 +14,7 @@ whitelist_externals = bash
                       find
                       rm
                       env
-# By default ostestr will set concurrency
+# By default stestr will set concurrency
 # to ncpu, to specify something else use
 # the concurrency=<n> option.
 # call ie: 'tox -epy27 -- --concurrency=4'
@@ -27,12 +26,12 @@ passenv = http_proxy HTTP_PROXY https_proxy HTTPS_PROXY no_proxy NO_PROXY OS_DEB
 [testenv:py27]
 commands =
     {[testenv]commands}
-    ostestr '{posargs}'
+    stestr run {posargs}
 
 [testenv:py35]
 commands =
     {[testenv]commands}
-    ostestr '{posargs}'
+    stestr run {posargs}
 
 [testenv:genconfig]
 commands = oslo-config-generator --config-file=etc/masakari/masakari-config-generator.conf
