Add framework for masakari-status upgrade check
This commit adds the functionality of masakari-status CLI for performing
upgrade checks as part of the Stein cycle upgrade-checkers goal.
It only includes a sample check which must be replaced by real checks in
future.

Change-Id: I17c79af15eca5f6da7e32dbedbdc392c97114d42
Story: 2003657
Task: 26140

--- a/setup.cfg
+++ b/setup.cfg
@@ -48,6 +48,7 @@ console_scripts =
     masakari-api = masakari.cmd.api:main
     masakari-engine = masakari.cmd.engine:main
     masakari-manage = masakari.cmd.manage:main
+    masakari-status = masakari.cmd.status:main
 
 wsgi_scripts =
     masakari-wsgi = masakari.cmd.api:initialize_application
