--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,7 @@ summary = Virtual Machine High Availability (VMHA) service for OpenStack
 description-file =
     README.rst
 author = OpenStack
-author-email = openstack-dev@lists.openstack.org
+author-email = openstack-discuss@lists.openstack.org
 home-page = https://docs.openstack.org/masakari/latest/
 classifier =
     Environment :: OpenStack
