--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -1,6 +1,7 @@
 - project:
     templates:
       - check-requirements
+      - openstack-cover-jobs
       - openstack-python-jobs
       - openstack-python35-jobs-nonvoting
       - release-notes-jobs-python3
