--- a/tox.ini
+++ b/tox.ini
@@ -39,6 +39,12 @@ commands =
     {[testenv]commands}
     stestr run {posargs}
 
+[testenv:functional]
+basepython = python3
+commands =
+  {[testenv]commands}
+  stestr --test-path=./masakari/tests/functional run --concurrency=1 --slowest {posargs}
+
 [testenv:genconfig]
 basepython = python3
 commands = oslo-config-generator --config-file=etc/masakari/masakari-config-generator.conf
