Add progress details for recovery workflows
This patch uses taskflow's persistence feature to store recovery
workflows details into database.

Added a new microversion to return progress_details of the
notification in `GET /notifications/<notification_uuid>` API.

APIImpact:
GET /notifications/<notification_uuid> API includes details
of recovery workflow

Change-Id: I93c1b7d88823e02d9a02855cabb8b22c9e40a7d5
Implements: bp progress-details-recovery-workflows

--- a/api-ref/source/parameters.yaml
+++ b/api-ref/source/parameters.yaml
@@ -295,6 +295,14 @@ on_maintenance:
   in: body
   required: false
   type: boolean
+recovery_workflow_details:
+  description: |
+    Recovery workflow details of the notification. This is a list of dictionary.
+
+    ``New in version 1.1``
+  in: body
+  required: true
+  type: array
 reserved:
   description: |
     A boolean indicates whether this host is reserved or not, if it is
