--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -7,3 +7,12 @@
       - openstack-python35-jobs-nonvoting
       - publish-openstack-docs-pti
       - release-notes-jobs-python3
+
+- project:
+    masakari-systemfault-integration-ci:
+      jobs:
+        - masakari-build-test
+
+- job:
+    name: masakari-build-test
+    parent: base
