Add masakari-systemfault-integration-ci to .zuul.yaml
This patch modifies .zuul.yaml to run masakari-systemfault-integration-ci.

Change-Id: I9792d972e04ca28133fd0cd4c5d5fcf12ad17ca6

--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -5,3 +5,12 @@
       - openstack-python35-jobs-nonvoting
       - release-notes-jobs
       - publish-openstack-sphinx-docs
+
+- project:
+    masakari-systemfault-integration-ci:
+      jobs:
+        - masakari-build-test
+
+- job:
+    name: masakari-build-test
+    parent: base
