Add masakari-systemfault-integration-ci to .zuul.yaml
This patch modifies .zuul.yaml to run masakari-systemfault-integration-ci.

Change-Id: Ib28c572534af335c2809c1f91c37f445da3907f4

--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -11,3 +11,12 @@
     gate:
       jobs:
         - openstack-tox-lower-constraints
+
+- project:
+    masakari-systemfault-integration-ci:
+      jobs:
+        - masakari-build-test
+
+- job:
+    name: masakari-build-test
+    parent: base
