--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -4,7 +4,8 @@
       - openstack-cover-jobs
       - openstack-lower-constraints-jobs
       - openstack-python-jobs
-      - openstack-python35-jobs-nonvoting
+      - openstack-python35-jobs
+      - openstack-python36-jobs
       - publish-openstack-docs-pti
       - release-notes-jobs-python3
 
