--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 minversion = 2.0
-envlist = py35,py27,pep8
+envlist = pep8,py27,py35,py36
 skipsdist = True
 
 [testenv]
@@ -29,6 +29,12 @@ commands =
 
 [testenv:py35]
 basepython = python3
+commands =
+    {[testenv]commands}
+    stestr run {posargs}
+
+[testenv:py36]
+basepython = python3.6
 commands =
     {[testenv]commands}
     stestr run {posargs}
