Update hacking version >1.1.0
Updated hacking version to >1.1.0 and <1.2.0.

Change-Id: I77ff4723fd420fc2f9afe0ca6c3d85d7ae1a28ba

--- a/tox.ini
+++ b/tox.ini
@@ -92,7 +92,7 @@ show-source = True
 # [H203] Use assertIs(Not)None to check for None.
 # [H904] Delay string interpolations at logging calls.
 enable-extensions = H106,H203,H904
-ignore = E123,E125,E128,H405
+ignore = E123,E125,E128,E731,H405
 builtins = _
 exclude=.venv,.git,.tox,dist,doc,*lib/python*,*egg,build
 
