Migrate multinode jobs to Ubuntu Bionic
We have migrated the zuulv3 job to Bionic during Dec/Jan month.
 - http://lists.openstack.org/pipermail/openstack-discuss/2018-December/000837.html
 - https://etherpad.openstack.org/p/devstack-bionic
But that effort does not move all gate job to Bionic as there are
large amount of jobs are still legacy jobs. All the legacy jobs still
use Xenial as nodeset.

As per the decided runtime for Stein, we need to test everything on openstack
CI/CD on Bionic - https://governance.openstack.org/tc/reference/runtimes/stein.html

Below patch move the legacy base jobs to bionic which will move the derived jobs
automatically to bionic. These jobs are modified with branch variant so that they will use
Bionic node from stein onwards and xenial for all other stable branches
until stable/rocky.
- https://review.openstack.org/#/c/639096

This commit modify the nodeset of multinode job to bionic

More Details: 
- https://etherpad.openstack.org/p/legacy-job-bionic
- http://lists.openstack.org/pipermail/openstack-discuss/2019-March/003614.html

Depends-On: https://review.openstack.org/#/c/639096
Change-Id: I4c7398a3f9b6f3f948007e4ae2467598f0c29818
(cherry picked from commit 5f9f9bab0a2e04ac8b34e3de63facce285ea4adc)

--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -2,9 +2,9 @@
     name: masakari-openstack-multi-nodes
     nodes:
       - name: controller
-        label: ubuntu-xenial
+        label: ubuntu-bionic
       - name: compute1
-        label: ubuntu-xenial
+        label: ubuntu-bionic
     groups:
       # Nodes running the compute service
       - name: compute
