--- a/tox.ini
+++ b/tox.ini
@@ -73,13 +73,16 @@ commands =
     coverage xml -o cover/coverage.xml
 
 [testenv:docs]
+deps = -r{toxinidir}/doc/requirements.txt
 basepython = python3
 commands =
   python setup.py build_sphinx
 
 [testenv:releasenotes]
+deps = -r{toxinidir}/doc/requirements.txt
 basepython = python3
 commands =
+  rm -fr releasenotes/build
   sphinx-build -a -E -W -d releasenotes/build/doctrees -b html releasenotes/source releasenotes/build/html
 
 [testenv:debug]
