OpenDev Migration Patch
This commit was bulk generated and pushed by the OpenDev sysadmins
as a part of the Git hosting and code review systems migration
detailed in these mailing list posts:

http://lists.openstack.org/pipermail/openstack-discuss/2019-March/003603.html
http://lists.openstack.org/pipermail/openstack-discuss/2019-April/004920.html

Attempts have been made to correct repository namespaces and
hostnames based on simple pattern matching, but it's possible some
were updated incorrectly or missed entirely. Please reach out to us
via the contact information listed at https://opendev.org/ with any
questions you may have.

--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -46,11 +46,11 @@
       devstack_services:
         horizon: false
         swift: false
-      zuul_work_dir: src/git.openstack.org/openstack/masakari
+      zuul_work_dir: src/opendev.org/openstack/masakari
     host-vars:
       controller:
         devstack_plugins:
-          masakari: https://git.openstack.org/openstack/masakari
+          masakari: https://opendev.org/openstack/masakari
         devstack_services:
           horizon: false
           swift: false
@@ -61,7 +61,7 @@
     group-vars:
       subnode:
         devstack_plugins:
-          masakari: https://git.openstack.org/openstack/masakari
+          masakari: https://opendev.org/openstack/masakari
         devstack_services:
           q-agt: true
           n-api: false
