--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -84,14 +84,13 @@
       - openstack-cover-jobs
       - openstack-lower-constraints-jobs
       - openstack-python-jobs
-      - openstack-python35-jobs
-      - openstack-python36-jobs
+      - openstack-python3-train-jobs
       - publish-openstack-docs-pti
       - release-notes-jobs-python3
     check:
       jobs:
         - masakari-functional-devstack-multinode:
-            voting: True
+            voting: true
 
 - project:
     masakari-systemfault-integration-ci:
