--- a/etc/masakari/api-paste.ini
+++ b/etc/masakari/api-paste.ini
@@ -7,6 +7,7 @@ use = call:masakari.api.urlmap:urlmap_factory
 [composite:masakari_api_v1]
 use = call:masakari.api.auth:pipeline_factory_v1
 keystone = cors http_proxy_to_wsgi request_id faultwrap sizelimit authtoken keystonecontext osapi_masakari_app_v1
+noauth2 = cors http_proxy_to_wsgi request_id faultwrap sizelimit noauth2 osapi_masakari_app_v1
 
 # filters
 [filter:cors]
