Reorganize masakari documentation
Updated operator guide documentation for
1. segregated sections appropriately
2. referred masakariclient for CLI section
3. added detailed 'Install and configure for Ubuntu' section
4. added detailed 'Verify operation' section
5. used sphinx-build instead of the pbr sphinx extention for building docs
   as instructed by the PTI[1]
6. cleaned up build_sphinx related entries in setup.cfg

[1]: https://governance.openstack.org/tc/reference/project-testing-interface.html#documentation

Change-Id: Iec93bebdbc7ffe1ccd27bb11f474384ff06a559c

--- a/.gitignore
+++ b/.gitignore
@@ -60,6 +60,14 @@ releasenotes/build
 # PyCharm IDE
 .idea/
 
+# configuration sample generation
+etc/masakari/masakari.conf.sample
+etc/masakari/masakari-custom-recovery-methods.conf.sample
+
 # policy sample generation
 etc/masakari/policy.yaml.sample
 
+# Files created by doc build
+doc/source/_static/masakari.conf.sample
+doc/source/_static/masakari-custom-recovery-methods.conf.sample
+doc/source/_static/masakari.policy.yaml.sample
