--- a/tox.ini
+++ b/tox.ini
@@ -76,7 +76,7 @@ commands =
 deps = -r{toxinidir}/doc/requirements.txt
 basepython = python3
 commands =
-  python setup.py build_sphinx
+  sphinx-build -W -b html doc/source doc/build/html
 
 [testenv:releasenotes]
 deps = -r{toxinidir}/doc/requirements.txt
