[train][goal][CI] Define IPv6-only testing job
As part of Train community goal 'Support IPv6-Only Deployments and Testing'[1],
Devstack, Tempest has defined the base job 'devstack-ipv6' and
'devstack-tempest-ipv6' which will deploy services on IPv6.

This commit adds a new job to run with the required IPv6 setting.

Story: #2005477
Task: #35904

[1] https://governance.openstack.org/tc/goals/train/ipv6-support-and-testing.html

Change-Id: I0f2401fd57c98879d40923ad59d224a531b17bbd
Depends-On: https://review.opendev.org/c/openstack/devstack/+/795161
Co-Authored-By: Radosław Piliszek <radoslaw.piliszek@gmail.com>

--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -1,12 +1,13 @@
 ---
 - job:
-    name: masakari-functional-devstack-multinode
+    name: masakari-functional-devstack
     parent: devstack
     description: |
-      Masakari functional tests job based on devstack (two-node).
-    nodeset: openstack-two-node-focal
+      Masakari functional tests job based on devstack (single-node).
     pre-run: playbooks/devstack/pre.yaml
-    run: playbooks/devstack/run.yaml
+    run:
+      - playbooks/devstack/run-devstack.yaml
+      - playbooks/devstack/run-tox.yaml
     post-run: playbooks/devstack/post.yaml
     required-projects:
       - openstack/masakari
@@ -54,6 +55,29 @@
           # It is enabled by default by the parent job (devstack) definition.
           cinder: false
 
+- job:
+    name: masakari-functional-devstack-multinode
+    parent: masakari-functional-devstack
+    description: |
+      Masakari functional tests job based on devstack (two-node).
+    nodeset: openstack-two-node-focal
+
+- job:
+    name: masakari-functional-devstack-ipv6
+    # NOTE(yoctozepto): The devstack job does not support multinode IPv6 yet.
+    parent: masakari-functional-devstack
+    description: |
+      Masakari functional tests job based on devstack (single-node).
+      IPv6 variant.
+    run:
+      - playbooks/devstack/run-devstack.yaml
+      - playbooks/devstack/run-verify-config-is-ipv6-only.yaml
+      - playbooks/devstack/run-tox.yaml
+    vars:
+      devstack_localrc:
+        SERVICE_IP_VERSION: 6
+        SERVICE_HOST: ""
+
 - project:
     templates:
       - check-requirements
@@ -67,6 +91,7 @@
       jobs:
         - openstack-tox-linters
         - masakari-functional-devstack-multinode
+        - masakari-functional-devstack-ipv6
     gate:
       jobs:
         - openstack-tox-linters
