--- a/tox.ini
+++ b/tox.ini
@@ -5,11 +5,13 @@ skipsdist = True
 
 [testenv]
 usedevelop = True
-install_command = pip install -c{env:UPPER_CONSTRAINTS_FILE:https://opendev.org/openstack/requirements/raw/branch/master/upper-constraints.txt} {opts} {packages}
 setenv = VIRTUAL_ENV={envdir}
          LANGUAGE=en_US
          LC_ALL=en_US.utf-8
-deps = -r{toxinidir}/test-requirements.txt
+deps =
+   -c{env:UPPER_CONSTRAINTS_FILE:https://releases.openstack.org/constraints/upper/master}
+   -r{toxinidir}/requirements.txt
+   -r{toxinidir}/test-requirements.txt
 whitelist_externals = bash
                       find
                       rm
