--- a/tox.ini
+++ b/tox.ini
@@ -83,6 +83,14 @@ deps = -c{env:TOX_CONSTRAINTS_FILE:https://releases.openstack.org/constraints/up
 commands =
   sphinx-build -W -b html doc/source doc/build/html
 
+[testenv:pdf-docs]
+deps = {[testenv:docs]deps}
+whitelist_externals =
+  make
+commands =
+  sphinx-build -W -b latex doc/source doc/build/pdf
+  make -C doc/build/pdf
+
 [testenv:releasenotes]
 deps = {[testenv:docs]deps}
 commands =
